// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly 1`] = `
<SVGIcon
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
/>
`;

exports[`Icon renders correctly with round, large and background 1`] = `
<CircleIcon
  background="yellow"
  size="large"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
/>
`;

exports[`Icon renders correctly with round, large and undefined background 1`] = `
<CircleIcon
  size="large"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
/>
`;

exports[`Icon renders correctly without defined size or background 1`] = `
<CircleIcon
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
/>
`;

exports[`Icon renders correctly, invalid size ignored 1`] = `
<CircleIcon
  size="xlarge"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
/>
`;

exports[`Icon renders nothing with an invalid name and undefined size attribute 1`] = `""`;

exports[`Icon renders nothing with an invalid name and undefined size attribute 2`] = `""`;

exports[`Icon renders nothing with an undefined name and undefined size 1`] = `""`;

exports[`Icon renders nothing with invalid name and invalid size 1`] = `""`;

exports[`Icon renders nothing with round, invalid name and invalid size 1`] = `""`;
